@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST xhtml2pdf-0.0.5.tar.gz 97399 SHA256 1f108c09d0939025069e71e099ec88fb477076bdc781e54215d28a8d42fe5868 SHA512 7c737e8c7ac1018f6f355488a2762a2b448383bb868a34a69e1012fc1c6dc4559d2eb4de1117ee3957712990f5837d7289dc9291a5b1ecb391be0aea53f9b64d WHIRLPOOL fbe3ab0cff346a695edaeeedd7f2256a8fc471ec5a23b9e25ae733b075f931b3de78addc236d091e818f02dff4c62243737fe8c00edfe08f7ac78d0b0da9c5aa
 DIST xhtml2pdf-0.0.6.tar.gz 100628 SHA256 29dbf7da8943ccef4afb958747cd0084762821546e3cc62d23115fd7470d95f0 SHA512 b79f3a1c465ddda20e6b8ac28324d78bbb100a764d1ecd9eaec80f22f67d9266112b93ddfde067a077754058969f09e9ebed227369c3e718693d35cf451b43e9 WHIRLPOOL 1ee4d093cc8c28431d208e7496af155f1b0cb92e45a754c87dc5367aa71332239df216ec3a2045b913d0b237e92ca379c0501c1f5654af5ed491e6ba96d010f9
 EBUILD xhtml2pdf-0.0.5-r1.ebuild 709 SHA256 8790c9d89f334d8dfc80f29af4db692a275c51628fe0f248279d1554ff86896a SHA512 e839a4790d0fe41489b8f6c2a1820169d04f1fa37230c9032158a2d0e46d6ad7518da12a5d9339f9d7979ae4284d12ef3fba79789f34e93a9204d687587701ea WHIRLPOOL c28228b36bfd64d785905e6ff364a42794f54390a902d96ad71ffc0b79542b5c94e722b5973c473500c32e3a9adf1414621f0af15a4e2efe3e0beb3f2b82881c
-EBUILD xhtml2pdf-0.0.6.ebuild 704 SHA256 eff14c2ddfa23cbf6c42cd87f91ca93dc3d8556c31980dcfe3844f7a77570555 SHA512 c6152c9b3d85e7a1d71302f0197e7a2f5ab884c8ad9b9c0ff2988543dca69f0b6f73d6a7bc47cf0dedc9514480def3861fe6f3fc977b559f7b0a607b7f3be2a2 WHIRLPOOL 2f4d56fb3b8f0183172490e25efaf3f69d193fd5cc81540d95189ed2a124219b71b554eb1d1140359b075aef626bd552d5b41a6deb0d833525c5aed431d96b23
-MISC ChangeLog 1799 SHA256 6a81f842a828752861a41a99cd0f599a6f72cc79c04a79710550ccc4b6dad24b SHA512 6b55ee834414031b71af36d03a98a5987ce9e4134472aef15a7d70069bd50e7d237d0097136c9aced259c33f83a010f2585dade0f228cbef07354fe902ec4ab9 WHIRLPOOL e69eaa886c64127a729ae75d1eab2e108065182e4db81edfad479a881af258eb10ec2ddc5b8d4cbbff88c9ef9666a26d5d2f027a6b8c40a1309a1404c3c86588
+EBUILD xhtml2pdf-0.0.6-r1.ebuild 880 SHA256 7b9bad442a9944e3ccdf92edb843f11f95620c851ae1be194240d70ca556233c SHA512 97d962eb27b2403495fd1ac216cf790642559eecb81e21863f0b16413bf6d25c363d785c1908bde3789cb425d14005f302a97dbd718cd2952a707edf5812ab15 WHIRLPOOL d85ffbcdc669b457f1658b258a59d69065042665b188b22f6444ca702989dce5cb52adb734e837d90a57b011cdd37b509f3ea835285d5757882eb2be99bde5e7
+MISC ChangeLog 2055 SHA256 f1873dcacc92489ba2d6471aafb4e9e087994ffaa7d4ffbb4f6847d73c56af8d SHA512 abd65b87372c724e545e2bb752ca19a7548a3c47590f8a1820181cd7a1e32d77a229e0e3dd3e13083ff8cef4b6c795a4c65d1c58d5d3babc1d2e6ffb352242e0 WHIRLPOOL d055628f6d4fbd1acb92ab6b74fa29df4a9dd16b6229dfd773e136d22943e045fca1542bf33aabb1bc9e49c46447ef7ad9a9711d52560d7bc9e9a3254b8f59f5
 MISC metadata.xml 232 SHA256 31985fddff28f6036a5439cfdfbe393feaa0f3631fdfeec18862d62487fa3d36 SHA512 1220be83f5dd34753ab2aa3ac0c97ef5a5bd0ac2df1bc741805f77b454c90a4e446c3d8cd357ffc35124828f06cd2a4f9782cbacd33a820a31cfebc2bffacfe0 WHIRLPOOL 8eed29eff7395fb2a7a914e4c1f17c91d7186cf392f86ba5e2ac1640959c2cb0f8c4e6b9b454ac0427b3b7ed8ff9f788ef5b461e0be319e334a48373420bfb9e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEUEAREIAAYFAlSneBkACgkQso7CE7gHKw38rQCUDoEQMQyDCjwt+MmUAd1oGD6Q
+3gCeIMlytsULmIwv0/3OlDaRIO55rls=
+=ESQ5
+-----END PGP SIGNATURE-----
