@@ -1,22 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/xhtml2pdf/xhtml2pdf-0.0.6.ebuild,v 1.1 2014/05/03 06:12:24 patrick Exp $
-
-EAPI=5
-PYTHON_COMPAT=( python2_{6,7} )
-
-inherit distutils-r1
-
-DESCRIPTION="PDF generator using HTML and CSS"
-HOMEPAGE="http://www.xhtml2pdf.com/ http://pypi.python.org/pypi/xhtml2pdf/"
-SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="Apache-2.0"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-
-DEPEND="dev-python/html5lib[${PYTHON_USEDEP}]
-	virtual/python-imaging[${PYTHON_USEDEP}]
-	dev-python/pyPdf[${PYTHON_USEDEP}]
-	dev-python/reportlab[${PYTHON_USEDEP}]"
-RDEPEND="${DEPEND}"
