@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-python/html5lib[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] virtual/python-imaging[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pyPdf[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/reportlab[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-DESCRIPTION=PDF generator using HTML and CSS
-EAPI=5
-HOMEPAGE=http://www.xhtml2pdf.com/ http://pypi.python.org/pypi/xhtml2pdf/
-IUSE=python_targets_python2_7
-KEYWORDS=~amd64 ~x86
-LICENSE=Apache-2.0
-RDEPEND=dev-python/html5lib[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] virtual/python-imaging[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pyPdf[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/reportlab[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-REQUIRED_USE=|| ( python_targets_python2_7 )
-SLOT=0
-SRC_URI=mirror://pypi/x/xhtml2pdf/xhtml2pdf-0.0.6.tar.gz
-_eclasses_=distutils-r1	6d697abf6c0c1d32af2c025a6b75e775	eutils	f99a767f569b1f0731b3a1edd17c1d11	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	5e9a53457b774d41e731613823baeb37	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=9f3620e7ce87953b5df48f160168b965
