@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/xhtml2pdf
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/xhtml2pdf/ChangeLog,v 1.12 2014/05/03 06:12:24 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/xhtml2pdf/ChangeLog,v 1.13 2015/01/03 05:03:06 idella4 Exp $
+
+*xhtml2pdf-0.0.6-r1 (03 Jan 2015)
+
+  03 Jan 2015; Ian Delaney <idella4@gentoo.org> +xhtml2pdf-0.0.6-r1.ebuild,
+  -xhtml2pdf-0.0.6.ebuild:
+  revbump; add new missed dep (PyPDF2), set borders to versions of reportlab,
+  fixes Bug #530134, rm broken version
 
 *xhtml2pdf-0.0.6 (03 May 2014)
 
